--- a/pixi.toml
+++ b/pixi.toml
@@ -17,4 +17,5 @@ black = "*"
 example-fft = "python -m pcd.examples.half_sphere"
 example-ls = "python -m pcd.examples.ls_half"
 example-split = "python -m pcd.examples.test_split"
+example-blob = "python -m pcd.examples.blob_sphere_example"
 fix-imports = "cd .. && PYTHONPATH=$PYTHONPATH:$(pwd) python -m pcd.examples.half_sphere"
