--- a/pixi.toml
+++ b/pixi.toml
@@ -17,5 +17,8 @@ black = "*"
 example-fft = "python -m pcd.examples.half_sphere"
 example-ls = "python -m pcd.examples.ls_half"
 example-split = "python -m pcd.examples.test_split"
+example-sphere = "python -m pcd.examples.sphere_example"
 example-blob = "python -m pcd.examples.blob_sphere_example"
 example-benchmark = "python -m pcd.examples.benchmark"
+example-rabbit = "python -m pcd.examples.tralalero_example"
+example-sahur = "python -m pcd.examples.example_sahur"
