--- a/pixi.toml
+++ b/pixi.toml
@@ -21,4 +21,5 @@ example-sphere = "python -m pcd.examples.sphere_example"
 example-blob = "python -m pcd.examples.blob_sphere_example"
 example-benchmark = "python -m pcd.examples.benchmark"
 example-rabbit = "python -m pcd.examples.tralalero_example"
+example-rabbit-fft = "python -m pcd.examples.rabbit_example_fft"
 example-sahur = "python -m pcd.examples.example_sahur"
